added signup page, page to create tracking plan and page to view plan

--- a/src/assets/scss/login/index.scss
+++ b/src/assets/scss/login/index.scss
@@ -14,8 +14,7 @@
   width:100%;
 }
 .form-box{
-  width:380px;
-  height:450px;
+  min-width:380px;
   background-color:black;
   padding:20px;
   display:flex;
@@ -48,6 +47,18 @@ button{
 .social i:hover{
   color:red;
   cursor:pointer;
+}
+
+.sign-up {
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  input[type=number] {
+    -moz-appearance: textfield;
+  }
 }
 
 
